--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_svg: ^2.0.9
+  easy_localization: ^3.0.3
+  flutter_screenutil: ^5.9.0
+  flutter_bloc: ^8.1.3
+  percent_indicator: ^4.2.3
+  pinput: ^3.0.1
+  readmore: ^2.2.0
+  get_it: ^7.6.4
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
