--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   video_player: ^2.8.1
   navigator_scope: ^1.0.1
   firebase_core: ^2.24.2
+  firebase_auth: ^4.16.0
+  cloud_firestore: ^4.14.0
+  flutter_secure_storage: ^9.0.0
 
 dev_dependencies:
   flutter_test:
