--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   lottie: ^2.7.0
   dartz: ^0.10.1
   http: ^1.1.2
+  internet_connection_checker: ^1.0.0+1
 
 dev_dependencies:
   flutter_test:
